src/ui/snapshots/kvn_tui__ui__layout__tests__draw_all_help_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 100, 24)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────────────────────────┐
│↑ 0.0 KB/┌ Help — All ──────────────────────────────────────────────────────────────────┐         │
└─────────│  Context          Key                Action                                  │─────────┘
┌ Sources │  Sources          u                  Update subscription or geo              │─────────┐
│No source│  Sources          i                  Cycle subscription auto-update          │         │
│subscript│  Sources          e                  Open profiles.json in $EDITOR           │         │
│         │  Sources          t / T              Test selected / all profiles            │         │
│         │  Logs             Shift+V            Select multiple logs                    │         │
│         │  Logs             y                  Yank selected log(s)                    │         │
│         │  DNS / Services   h/l / Left/Right   Change selected value                   │         │
│         │  Confirm Delete   y / Enter          Confirm deletion                        │         │
│         │> Overlays         Enter              Confirm selection or changes            │         │
│         │  Main panes       r                  Reconnect                               │         │
│         │  Main panes       s                  Disconnect                              │         │
│         │  Main panes       a                  Toggle auto-connect                     │         │
│         │  Main panes       K                  Toggle kill switch                      │         │
│         │  Main panes       m                  Routing mode                            │         │
│         │  Main panes       o                  Geo region                              │         │
│         │  Main panes       D                  DNS settings                            │         │
│         │  Main panes       S                  Service routing                         │         │
│         │                         Tab: show contextual commands                        │         │
│         │                    j/k scroll · gg/G edges · q/Esc/? back                    │         │
└─────────└──────────────────────────────────────────────────────────────────────────────┘─────────┘
[DISCONNECTED] [DNS: DoH] [Global] [Geo: never]
