src/ui/snapshots/kvn_tui__ui__layout__tests__draw_confirm_delete_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│Standalone profiles (1)               ││                                      │
│└ Alpha        ┌ Confirm ─────────────────────────────────────┐               │
│               │           Delete selected profile?           │               │
│               │                                              │               │
│               │     y/Enter confirm, q/Esc cancel, ? help    │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
 DISCONNECTED                                                        DoH  Global
