src/ui/snapshots/kvn_tui__ui__layout__tests__draw_confirm_quit_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Profiles ────────────────────────────┐┌ Logs ────────────────────────────────┐
│Name          Protocol Address  Port  ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│               ┌ Confirm Quit ────────────────────────────────┐               │
│               │       A VPN connection is still active.      │               │
│               │        Are you sure you want to quit?        │               │
│               │                                              │               │
│               │        Press y to confirm, n to cancel       │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[CONNECTED] [Global] [Geo: 2026-05-31 13:41]
