src/ui/snapshots/kvn_tui__ui__layout__tests__draw_dns_settings_overlay_fakeip_on_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 24)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│No sources. Press p to paste a profile││                                      │
│or subscription URL from clipboard.   ││                                      │
│               ┌ DNS ─────────────────────────────────────────┐               │
│               │                 DNS settings                 │               │
│               │                                              │               │
│               │         Preset: Google DoT (8.8.8.8)         │               │
│               │          Preset: Quad9 DoH (9.9.9.9)         │               │
│               │        Preset: System resolver (local)       │               │
│               │           Strategy: ‹ prefer_ipv4 ›          │               │
│               │               > Fake-IP: ‹ on ›              │               │
│               │                                              │               │
│               │           j/k navigate, h/l change           │               │
│               │          Enter confirm, q/Esc cancel         │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [DNS: fakeip] [Global] [Geo: 2026-05-31 13:41]
