src/ui/snapshots/kvn_tui__ui__layout__tests__draw_error_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Profiles ────────────────────────────┐┌ Logs ────────────────────────────────┐
│Name          Protocol Address  Port  ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│               ┌ Error ───────────────────────────────────────┐               │
│               │                     Error                    │               │
│               │                                              │               │
│               │             something went wrong             │               │
│               │                                              │               │
│               │           Press any key to dismiss           │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [Global] [Geo: 2026-05-31 13:41] something went wrong
