src/ui/snapshots/kvn_tui__ui__layout__tests__draw_geo_region_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│No sources. Press p to paste a profile││                                      │
│or subscription┌ Geo Region ──────────────────────────────────┐               │
│               │               Select geo region              │               │
│               │                                              │               │
│               │                   🇷🇺  Russia                  │               │
│               │                  > 🇨🇳  China                  │               │
│               │                    🇮🇷  Iran                   │               │
│               │           🌍  Global (no geo rules)           │               │
│               │                                              │               │
│               │    j/k navigate, Enter confirm, Esc cancel   │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [DNS: DoH] [Global] [Geo: 2026-05-31 13:41]
