src/ui/snapshots/kvn_tui__ui__layout__tests__draw_logs_help_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 100, 24)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────────────────────────┐
│↑ 0.0 KB/s  ↓ ┌ Help ──────────────────────────────────────────────────────────────┐              │
└──────────────│  gg/G         Go to first / last                                   │──────────────┘
┌ Sources ─────│                                                                    │──────────────┐
│No sources. Pr│  Logs                                                              │              │
│subscription U│  y            Yank selected log(s)                                 │              │
│              │  Shift+V      Select multiple logs                                 │              │
│              │  Esc          Cancel log selection                                 │              │
│              │                                                                    │              │
│              │  Sources                                                           │              │
│              │  Enter        Connect selected profile                             │              │
│              │> e            Open profiles.json in $EDITOR                        │              │
│              │  y            Yank selected source                                 │              │
│              │  p            Paste source from clipboard                          │              │
│              │  d            Delete selected source                               │              │
│              │  u            Update subscription or geo                           │              │
│              │  i/I          Cycle subscription / geo auto-update                 │              │
│              │  t/T          Test selected / all profiles                         │              │
│              │                                                                    │              │
│              │  Connection                                                        │              │
│              │                                                                    │              │
│              │               j/k scroll · gg/G edges · q/Esc/? back               │              │
└──────────────└────────────────────────────────────────────────────────────────────┘──────────────┘
[DISCONNECTED] [DNS: DoH] [Global] [Geo: never]
